Fix buttons, separators, and add alignment classes

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -70,6 +70,10 @@
 		margin: 30px 0 0;
 	}
 
+	.wp-block-separator {
+		clear: both;
+	}
+
 	.posts-navigation,
 	.post-navigation {
 		margin: 60px 0 0;
