--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -163,6 +163,7 @@ a.cta-button {
 
 .wp-block-button .wp-block-button__link {
 	@include hover-state {
+		color: $color-text;
 		background: transparent;
 		box-shadow: inset 0 -5px 0 currentColor !important;
 	}
@@ -202,4 +203,23 @@ a.cta-button {
 		margin: 10px 0 8px;
 		text-align: left;
 	}
+}
+
+.alignleft {
+	display: inline;
+	float: left;
+	margin-right: 1.5em;
+}
+
+.alignright {
+	display: inline;
+	float: right;
+	margin-left: 1.5em;
+}
+
+.aligncenter {
+	clear: both;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
